v1 of inspector window

--- a/HSTK/HSTK/HSTK.vcxproj
+++ b/HSTK/HSTK/HSTK.vcxproj
@@ -141,6 +141,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Components.h" />
+    <ClInclude Include="EditorGUI.h" />
     <ClInclude Include="GetPointerToSharedMemory.h" />
     <ClInclude Include="Systems.h" />
   </ItemGroup>
