--- a/HSTK/HSTK/HSTK.vcxproj.filters
+++ b/HSTK/HSTK/HSTK.vcxproj.filters
@@ -35,6 +35,9 @@
     <ClInclude Include="Components.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="EditorGUI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="PropertySheet.props" />
